Remove AbstractWeighting